--- a/client/views/partials/admin/services/addNewAccount.html
+++ b/client/views/partials/admin/services/addNewAccount.html
@@ -249,7 +249,7 @@
         </uib-accordion>
 
         <div class="col-xs-12 save-btns">
-            <a href="#" class="btn btn-danger" ng-click="cancel()">Cancel</a>
+            <a href="#" class="btn btn-danger" ui-sref="services.gpsAccounts">Cancel</a>
             <a href="#" class="btn btn-primary">Submit</a>
 
         </div>
