--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -5,7 +5,7 @@
         </li>
 
         <li class="pull-right">
-            <button class="btn btn-success" ui-sref="services.transferDevice">Assign Devices</button>
+            <button class="btn btn-success" ng-click="assignDevicesModal()">Assign Devices</button>
         </li>
         <li class="pull-right">
             <button class="btn btn-primary" ui-sref="services.addDevice">Add Devices</button>
@@ -24,7 +24,8 @@
         </li>
         <div class="clearfix"></div>
     </ul>
-    <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive" ng-table="deviceParams">
+    <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive"
+           ng-table="deviceParams">
         <tr ng-repeat="device in currentPageOfDevices" style="text-align: center;">
             <td data-title="'Account ID'" sortable="'accountId'" class="clickable-item">
                 {{device.accountId.userName}}
@@ -63,3 +64,34 @@
         </tr>
     </table>
 </div>
+
+
+<script type="text/ng-template" id="assignDevicesModal.html">
+
+        <!--<a href="#" class="btn btn-primary" ui-sref="services.gpsDevices"> Cancel</a>-->
+        <!--<a href="#" class="btn btn-primary" ng-click="transferDevices()"> Submit</a>-->
+
+
+        <div class="modal-header">
+            <h3 class="modal-title" id="modal-title">Transfer Devices</h3>
+        </div>
+        <div class="modal-body" id="modal-body">
+            <div class="row">
+                <div ng-dropdown-multiselect=""
+                     options="allDevices"
+                     selected-model="selectedDevices"
+                     extra-settings="selected_baseline_settings" class="col-sm-4" translation-texts="customText">
+                </div>
+                <select class="form-control custom-form-control" ng-model="assignedTo" class ="col-xs-7">
+                    <option value="" selected>Transfer To</option>
+                    <option ng-repeat="employee in employees" value="{{employee.id_admin}}">{{employee.displayName}}
+                    </option>
+                </select>
+            </div>
+            <div ng-show="error">{{error}}</div>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" type="button" ng-click="transferDevices()">Submit</button>
+            <button class="btn btn-danger" type="button" ng-click="closeAssignDevice()">Cancel</button>
+        </div>
+</script>
