--- a/client/views/partials/admin/services/serviceDashboard.html
+++ b/client/views/partials/admin/services/serviceDashboard.html
@@ -1,7 +1,7 @@
 <div class="col-xs-12 cus-main">
     <ul class="list-inline custom-ul">
         <li>
-            <button class="btn btn-primary" ui-sref="addNewAccount">New Account</button>
+            <button class="btn btn-primary" ui-sref="services.addNewAccount">New Account</button>
 
         </li>
         <li ui-sref-active="activated"><a href="#" ui-sref="services.gpsAccounts">GPS Accounts</a></li>
