--- a/client/views/partials/admin/orderProcess/createTruckRequest.html
+++ b/client/views/partials/admin/orderProcess/createTruckRequest.html
@@ -104,7 +104,7 @@
 
         </uib-accordion>
         <div class="col-xs-12 save-btns">
-            <a href="#" class="btn btn-danger" ng-click="cancel()">Cancel</a>
+            <a href="#" class="btn btn-danger" ui-sref="orderprocess.truckRequest">Cancel</a>
             <a href="#" class="btn btn-primary">Submit</a>
 
         </div>
