--- a/client/views/partials/admin/orderProcess/truckRequets.html
+++ b/client/views/partials/admin/orderProcess/truckRequets.html
@@ -1,7 +1,7 @@
 <ul class="list-inline title-ul">
     <li class="pull-left name-head">Truck Request</li>
     <li class="pull-right">
-        <button class="btn btn-primary" ui-sref="createTruckRequest">Create New</button>
+        <button class="btn btn-primary" ui-sref="orderprocess.createTruckRequest">Create New</button>
     </li>
     <li class="pull-right col-xs-2">
         <select class="form-control">
