--- a/client/views/partials/admin/settings/gpsSettings.html
+++ b/client/views/partials/admin/settings/gpsSettings.html
@@ -1,99 +1,102 @@
 <div ng-controller="settingsCtrl" ng-init="getPlanDetails()">
-    <p class="pull-left name-head">GPS Renewal Plans</p>
-    <div class="row mt-20">
-        <div class="col-sm-7 pull-right pall-zero">
-            <div class="col-sm-5">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+    <div>
+        <p class="pull-left name-head">GPS Renewal Plans</p>
+        <div class="row mt-20">
+            <div class="col-sm-7 pull-right pall-zero">
+                <div class="col-sm-5">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+                    </div>
                 </div>
-            </div>
-            <div class="col-sm-4">
-                <select class="form-control">
-                    <option value="" selected>Select</option>
-                    <option>Enabled</option>
-                    <option>Disabled</option>
-                </select>
-            </div>
-            <div class="col-sm-2">
-                <button class="btn btn-primary" ng-click="openPopup()">Add New</button>
+                <div class="col-sm-4">
+                    <select class="form-control">
+                        <option value="" selected>Select</option>
+                        <option>Enabled</option>
+                        <option>Disabled</option>
+                    </select>
+                </div>
+                <div class="col-sm-2">
+                    <button class="btn btn-primary" ng-click="openPopup()">Add New</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="clearfix"></div>
-<table class="table table-bordered table-striped table-condensed table-hover mt-20" ng-table="settingParams">
-    <tbody>
-    <tr ng-repeat="plan in planData">
-        <td align="center"><input type="checkbox"/></td>
-        <td>{{$index+1}}</td>
-        <td data-title="'Plan Name'" sortable="'planName'" class="clickable-item">{{plan.planName}}</td>
-        <td data-title="'Duration'" sortable="'durationInMonths'" class="clickable-item">{{plan.durationInMonths}}</td>
-        <td data-title="'Amount'" sortable="'amount'" class="clickable-item">{{plan.amount}}</td>
-        <td data-title="'Status'" sortable="'status'" class="clickable-item">{{plan.status}}</td>
-        <td><a href="#" ng-click="editPlanPopup(plan._id)">Edit</a>/<a href="#"
-                                                                       ng-click="delGpsPlan(plan._id)">Delete</a></td>
-    </tr>
-    </tbody>
-</table>
-<script type="text/ng-template" id="addNewGPS.html">
-    <div class="modal-header">
-        <h3 class="modal-title" id="modal-title">New Renewal Plans</h3>
-        <span class="close-btn" ng-click="cancel()"><i class="fa fa-close"></i></span>
-    </div>
-    <div class="modal-body" id="modal-body">
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="form-group">
-                    <input type="text" class="form-control" ng-model="gpsAddPlan.planName" placeholder="Plan Name *"/>
+    <div class="clearfix"></div>
+    <table class="table table-bordered table-striped table-condensed table-hover mt-20" ng-table="settingParams">
+        <tbody>
+        <tr ng-repeat="plan in planData">
+            <td><input type="checkbox"/></td>
+            <td date-title="'S No'" class="clickable-item">{{$index+1}}</td>
+            <td data-title="'Plan Name'" sortable="'planName'" class="clickable-item">{{plan.planName}}</td>
+            <td data-title="'Duration'" sortable="'durationInMonths'" class="clickable-item">{{plan.durationInMonths}}
+            </td>
+            <td data-title="'Amount'" sortable="'amount'" class="clickable-item">{{plan.amount}}</td>
+            <td data-title="'Status'" sortable="'status'" class="clickable-item">{{plan.status}}</td>
+            <td><a href="#" ng-click="editPlanPopup(plan._id)">Edit</a>/
+                <a href="#" ng-click="delGpsPlan(plan._id)">Delete</a></td>
+        </tr>
+        </tbody>
+    </table>
+    <script type="text/ng-template" id="addNewGPS.html">
+        <div class="modal-header">
+            <h3 class="modal-title" id="modal-title">New Renewal Plans</h3>
+            <span class="close-btn" ng-click="cancel()"><i class="fa fa-close"></i></span>
+        </div>
+        <div class="modal-body" id="modal-body">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <input type="text" class="form-control" ng-model="gpsAddPlan.planName"
+                               placeholder="Plan Name *"/>
+                    </div>
                 </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="form-group">
-                    <input type="number" class="form-control" ng-model="gpsAddPlan.amount" placeholder="Amount *"/>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <input type="number" class="form-control" ng-model="gpsAddPlan.amount" placeholder="Amount *"/>
+                    </div>
                 </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="form-group">
-                    <input type="number" class="form-control" ng-model="gpsAddPlan.durationInMonths"
-                           placeholder="Duration in Months *"/>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <input type="number" class="form-control" ng-model="gpsAddPlan.durationInMonths"
+                               placeholder="Duration in Months *"/>
+                    </div>
                 </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="form-group">
-                    <input type="hidden" class="form-control" ng-model="gpsAddPlan.type" placeholder=""/>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <input type="hidden" class="form-control" ng-model="gpsAddPlan.type" placeholder=""/>
+                    </div>
                 </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="form-group">
-                    <p class="smsenabled">Status</p>
-                    <ul class="list-inline">
-                        <li>
-                            <div class="radio">
-                                <label class="pl-0">
-                                    <input type="radio" ng-model="gpsAddPlan.status" ng-value="true" name="status">
-                                    <span class="cr"><i class="cr-icon fa fa-circle"></i></span>
-                                    Enable
-                                </label>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="radio">
-                                <label>
-                                    <input type="radio" ng-model="gpsAddPlan.status" ng-value="false" name="status">
-                                    <span class="cr"><i class="cr-icon fa fa-circle"></i></span>
-                                    Disable
-                                </label>
-                            </div>
-                        </li>
-                    </ul>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <p class="smsenabled">Status</p>
+                        <ul class="list-inline">
+                            <li>
+                                <div class="radio">
+                                    <label class="pl-0">
+                                        <input type="radio" ng-model="gpsAddPlan.status" ng-value="true" name="status">
+                                        <span class="cr"><i class="cr-icon fa fa-circle"></i></span>
+                                        Enable
+                                    </label>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" ng-model="gpsAddPlan.status" ng-value="false" name="status">
+                                        <span class="cr"><i class="cr-icon fa fa-circle"></i></span>
+                                        Disable
+                                    </label>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="col-sm-12 text-center">
-                <input type="button" class="btn btn-primary" value="Submit" ng-click="addGPSPlan()"/>
+                <div class="col-sm-12 text-center">
+                    <input type="button" class="btn btn-primary" value="Submit" ng-click="addGPSPlan()"/>
+                </div>
             </div>
         </div>
-    </div>
-</script>
+    </script>
 </div>
 
