--- a/client/views/partials/accounts/edit-account.html
+++ b/client/views/partials/accounts/edit-account.html
@@ -93,10 +93,20 @@
     </div>
     <div class="clearfix"></div>
     <div>
-    <div class="col-xs-4">
+    <div class="row">
         <h2 class="title-name">API & Secret Key</h2>
+        <div class="col-xs-3" style="padding-left: 30px">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" ng-model="enableGlobalAccess">
+                    <span class="cr ntfns"><i class="cr-icon ntfns-icon fa fa-check"></i></span>
+                    Enable Global Access
+                </label>
+            </div>
+        </div>
+        <div class="col-xs-6" style="padding-bottom: 20px">
         <button type="button" class="btn can last" ng-click="createKeyPair(addNewAccount._id)">Create Keys</button>
-
+        </div>
     </div>
         <div class="col-xs-12">
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="accountParams">
@@ -105,7 +115,11 @@
             </td>
             <td data-title="'Secret Key'" sortable="'secretKey'" class="clickable-item">{{key.secretKey }}
             </td>
-            <td data-title="'Action'" class="clickable-item">Delete
+            <td data-title="'Action'" class="clickable-item">
+                <a href="#" class="btn" ng-click="deleteKeyPair(key,addNewAccount._id)">
+                    <span class="glyphicon glyphicon-remove"></span>
+                </a>
+
             </td>
         </tr>
     </table>
