--- a/client/views/partials/admin/administrators/administratorMenu.html
+++ b/client/views/partials/admin/administrators/administratorMenu.html
@@ -3,7 +3,7 @@
         <li ui-sref-active="activated"><a href="#" ui-sref="admin.administrators">Administrators</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="admin.adminRoles">Admin Roles</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="admin.adminLogHistory">Admin Log History</a></li>
-        <li ui-sref-active="activated"><a href="#" ui-sref="admin.franchise">Franchise</a></li>
+        <li ui-sref-active="activated"><a href="#" ui-sref="admin.franchises">Franchise</a></li>
     </ul>
     <ui-view></ui-view>
 </div>
