--- a/client/views/partials/admin/administrators/administrators.html
+++ b/client/views/partials/admin/administrators/administrators.html
@@ -1,20 +1,14 @@
-<div ng-controller="administratorsCtrl" ng-init="getEmployee()">
+<div ng-controller="administratorsCtrl" ng-init="countEmployee();adminRolesDropDown()">
     <ul class="list-inline title-ul">
-        <li class="pull-left name-head">Administrators</li>
+        <li class="pull-left name-head">Administrators
+        </li>
         <li class="pull-right">
-            <button class="btn btn-primary" ui-sref="addUpdateEmployee">Create New</button>
+            <button class="btn btn-primary" ui-sref="admin.addUpdateEmployee">Create New</button>
         </li>
         <li class="pull-right col-xs-2">
             <select class="form-control">
-                <option>Select</option>
-                <option>Qualified</option>
-                <option>Request for Approval</option>
-                <option>Initiate</option>
-                <option>Callback</option>
-                <option>Duplicate</option>
-                <option>Junk Lead</option>
-                <option>Language Barrier</option>
-                <option>Not Interested</option>
+                <option>Select by Role</option>
+                <option ng-repeat="adminRole in adminRoles" value="{{adminRole.role._id}}">{{adminRole.role}}</option>
             </select>
         </li>
         <li class="col-xs-3 pull-right">
@@ -23,36 +17,42 @@
                 <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
             </div>
         </li>
+
+        <div class="clearfix"></div>
     </ul>
-    <div class="clearfix"></div>
-    <table class="table table-bordered table-striped table-condensed table-hover mt-20" ng-table="employeeParams">
-        <thead>
-        <tr>
-            <th>S No</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Mobile</th>
-            <th>Email</th>
-            <th>City</th>
-            <th>State</th>
-            <th>Role</th>
-            <th>Status</th>
-            <th>Action</th>
+    <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive" ng-table="employeeParams">
+        <tr ng-repeat="employee in currentPageOfEmployees" style="text-align: center;">
+            <td data-title="'First Name'" sortable="'firstName'" class="clickable-item">
+                {{employee.firstName}}
+            </td>
+            <td data-title="'Last Name'" sortable="'lastName'" class="clickable-item">
+                {{employee.lastName}}
+            </td>
+            <td data-title="'Mobile'" sortable="'contactPhone'" class="clickable-item">
+                {{employee.contactPhone}}
+            </td>
+            <td data-title="'Email'" sortable="'email'" class="clickable-item">
+                {{employee.email}}
+            </td>
+            <td data-title="'City'" sortable="'city'" class="clickable-item">
+                {{employee.city}}
+            </td>
+            <td data-title="'State'" sortable="'state'" class="clickable-item">
+                {{employee.state}}
+            </td>
+            <td data-title="'Role'" sortable="'adminRoleId'" class="clickable-item">
+                {{employee.adminRoleId.role}}
+            </td>
+            <td data-title="'Status'" sortable="'isActive'" class="clickable-item">
+                {{employee.isActive?'Active':'Inactive'}}
+            </td>
+            <td data-title="'Edit/Delete'" sortable="'contactPhone'" class="clickable-item">
+                <a href="#" ui-sref="admin.addUpdateEmployee({employeeId: employee._id})">Edit</a> /
+                <a href="#" ng-click="deleteEmployee($index)">Delete</a>
+            </td>
         </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="employee in employees">
-            <td>{{$index+1}}</td>
-            <td data-title="'firstName'" sortable="'firstName'" class="clickable-item">{{employee.firstName || '--'}}</td>
-            <td data-title="'lastName'" sortable="'lastName'" class="clickable-item">{{employee.lastName || '--'}}</td>
-            <td data-title="'contactPhone'" sortable="'contactPhone'" class="clickable-item">{{employee.contactPhone || '--'}}</td>
-            <td data-title="'email'" sortable="'email'" class="clickable-item">{{employee.email || '--'}}</td>
-            <td data-title="'city'" sortable="'city'" class="clickable-item">{{employee.city || '--'}}</td>
-            <td data-title="'state'" sortable="'state'" class="clickable-item">{{employee.state || '--'}}</td>
-            <td data-title="'Role'" sortable="'erp'" class="clickable-item">{{employee.role || '--'}}</td>
-            <td data-title="'isActive'" sortable="'load'" class="clickable-item">{{employee.isActive?'Active':'Inactive'}}</td>
-            <td><a href="#" ui-sref="addEmployee({employeeId:employee._id})">Edit</a>/<a href="#" ng-click="deleteEmployee(employee._id)">Delete</a></td>
+        <tr ng-if="!currentPageOfEmployees || currentPageOfEmployees.length === 0">
+            <td colspan="8">No Employees Records exist.</td>
         </tr>
-        </tbody>
     </table>
 </div>
