create account module

--- a/client/css/adminStyles.css
+++ b/client/css/adminStyles.css
@@ -393,6 +393,10 @@ footer {
 
 .account-rotues span {
     display: inline-block;
+    /*position: absolute;*/
+    /*right: 0;*/
+    /*bottom: 17px;*/
+    /*font-size: 20px;*/
 }
 
 .plans li {
