--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -94,6 +94,7 @@
         src="components/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
 
+
 <!--Routing adminApp.js File-->
 <script src="js/adminApp.js"></script>
 
@@ -105,6 +106,7 @@
 <script src="js/modules/admin/devicesModule.js"></script>
 <script src="js/modules/admin/notificationModule.js"></script>
 <script src="js/modules/admin/administratorModule.js"></script>
+<script src="js/modules/admin/accountsModule.js"></script>
 <!--Services-->
 <script src="js/services.js"></script>
 <script src="js/lib/bundles/ng-table.js"></script>
