Truck Types Settings Added

--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -54,6 +54,7 @@
                     <adminleft-menu label="Settings" ui-sref="settings.gpsSettings"></adminleft-menu>
                     <adminleft-menu label="Notifications" ui-sref="notifications.avaTrucks"></adminleft-menu>
                     <adminleft-menu label="Admin" ui-sref="admin.administrators"></adminleft-menu>
+
                     <div class="clearfix"></div>
                 </div>
                 <div class="col-xs-12 col-sm-10 right-nav pall-zero">
@@ -62,8 +63,9 @@
             </div>
         </div>
     </div>
-    <div class="clearfix"></div>
+
 </div>
+<div class="clearfix"></div>
 <footer>
     <div class="container-fluid">
         <div class="row">
@@ -87,8 +89,9 @@
 <script src="components/angular-cookies/angular-cookies.min.js"></script>
 <script src="components/angular-ui-select/dist/select.min.js"></script>
 <script src="components/underscore/underscore-min.js"></script>
+<script type="text/javascript"
+        src="components/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
-<script type="text/javascript" src="components/angularjs-dropdown-multiselect/angularjs-dropdown-multiselect.min.js"></script>
 
 <!--Routing adminApp.js File-->
 <script src="js/adminApp.js"></script>
