--- a/client/views/partials/admin/administrators/addUpdateEmployee.html
+++ b/client/views/partials/admin/administrators/addUpdateEmployee.html
@@ -62,7 +62,8 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <input type="file" class="form-control custom-form-control" ng-model="files"/>
+                    <input type="file" ngf-select class="form-control custom-form-control"
+                           ng-model="employee.profilePic" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="1MB" ngf-resize="{width: 100, height: 100}" />
                 </div>
                 <div class="form-group">
                     <p class="smsenabled">Is Active*:</p>
