--- a/client/views/partials/admin/orderProcess/editTruckRequest.html
+++ b/client/views/partials/admin/orderProcess/editTruckRequest.html
@@ -22,8 +22,9 @@
                                    placeholder="Expected Price"/>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" name="fullName" ng-model="truckRequest.date | date:'medium'"
-                                   placeholder="Date Required "/>
+                            <admin-date-picker id="date" ng-model="truckRequest.date" placeholder="'Date Required *'"
+                                               class="'form-control'"></admin-date-picker>
+
                         </div>
                         <div class="form-group">
                             <input type="text" class="form-control" name="fullName" ng-model="truckRequest.pickupPoint"
@@ -89,7 +90,7 @@
                 <div class="row">
                     <div class="col-sm-11">
                         <div class="form-group col-sm-2">
-                            <input type="text" class="form-control" name="fullName" ng-model="truckRequest.name"
+                            <input type="text" class="form-control" ng-model="truckRequest.source" name="fullName"  id="searchSource" ng-change="searchSource()"
                                    placeholder="Source *"/>
                         </div>
                         <div class="form-group col-sm-2">
