--- a/client/views/partials/admin/administrators/addUpdateEmployee.html
+++ b/client/views/partials/admin/administrators/addUpdateEmployee.html
@@ -63,7 +63,8 @@
                 </div>
                 <div class="form-group">
                     <input type="file" ngf-select class="form-control custom-form-control"
-                           ng-model="employee.profilePic" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="1MB" ngf-resize="{width: 100, height: 100}" />
+                           ng-model="employee.newProfilePic" name="profilePic" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-resize="{width: 100, height: 100}" />
+                    <img src="{{employee.profilePic}}" ng-if="employee.profilePic">
                 </div>
                 <div class="form-group">
                     <p class="smsenabled">Is Active*:</p>
