--- a/client/views/partials/admin/orderProcess/createTruckRequest.html
+++ b/client/views/partials/admin/orderProcess/createTruckRequest.html
@@ -104,7 +104,7 @@
                     <div class="col-xs-12 col-sm-3 ">
                         <div class="form-group">
                             <input type="text" class="form-control " name="source" ng-model="truck.source"
-                                   placeholder="Source"/>
+                                   id="searchSource{{$index}}" ng-change="addSearchSource($index)"                  placeholder="Source"/>
                         </div>
                         <div class="form-group">
                             <admin-date-picker id="date" ng-model="truck.date" placeholder="'Date Time Required *'"
@@ -115,7 +115,7 @@
                     <div class="col-xs-12 col-sm-3">
                         <div class="form-group">
                             <input type="text" class="form-control " name="state" ng-model="truck.destination"
-                                   placeholder="Destination"/>
+                                   id="searchDestination{{$index}}" ng-change="addSearchDestination($index)"             placeholder="Destination"/>
                         </div>
                         <div class="form-group">
                             <input type="text" class="form-control " name="pincode" ng-model="truck.aa"
