--- a/client/views/partials/admin/administrators/franchises.html
+++ b/client/views/partials/admin/administrators/franchises.html
@@ -6,16 +6,16 @@
             <button class="btn btn-primary" ui-sref="admin.addUpdateFranchise">Create New</button>
         </li>
         <li class="pull-right col-xs-2">
-            <select class="form-control" ng-model="franchise2" ng-change="initFranchise(role2);">
-                <option>Select</option>
+            <select class="form-control" ng-model="franchise2" ng-change="initFranchise(franchise2);">
+                <option value="" selected>Select by Status</option>
                 <option ng-value="true">Enabled</option>
                 <option ng-value="false">Disabled</option>
             </select>
         </li>
         <li class="col-xs-3 pull-right">
             <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+                <input type="text" class="form-control" placeholder="Search By Account" ng-model="franchise1">
+                <span class="input-group-addon" ng-click="initFranchise(franchise1);"><i class="glyphicon glyphicon-search"></i></span>
             </div>
         </li>
         <div class="clearfix"></div>
@@ -41,7 +41,7 @@
                 {{franchise.doj | date:'dd-MM-yyyy'}}
             </td>
             <td data-title="'Status'" sortable="'isActive'" class="clickable-item">
-                {{franchise.status?'Active':'Inactive'}}
+                {{franchise.status?'Enabled':'Disabled'}}
             </td>
             <td data-title="'Edit/Delete'" sortable="'contactPhone'" class="clickable-item">
                 <a href="#" ui-sref="admin.addUpdateFranchise({franchiseId: franchise._id})">Edit</a> /
